analytics module worked, updated design, bugfix